my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-hostname-ingress
  annotations:
  
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: / 
        pathType: Prefix 
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /api/(.*) 
        pathType: ImplementationSpecific 
        backend:
          service:
            name: httpbin-service
            port:
              number: 80
